--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ os_pipe = "0.9"
 parking_lot = "0.11"
 oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }
 reqwest = "0.10"
+libc = "0.2"
 
 [profile.release]
 #lto = true
