--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "taru"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Mewp <git@mewp.pl>"]
 edition = "2018"
 
@@ -23,6 +23,7 @@ mio = { version = "0.7", features = ["os-poll", "os-util"] }
 os_pipe = "0.9"
 parking_lot = "0.11"
 libc = "0.2"
+paste = "1.0"
 
 [profile.release]
 lto = true
